[metadata]
name = pysondb-v2
version = 2.0.0
author = Fredy Somy
author_email = fredysomy@gmail.com
description = A Simple, Lightweight, Efficent JSON based database for Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pysonDB/pysonDB-v2
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.7.0

[options.entry_points]
console_scripts =
    pysondb = pysondb.cli:main

[options.extras_require]
ujson =
    ujson==5.2.0

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
